# miragend

./: .woodpecker.yml  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  justfile  obfuscation_mapping.csv  patch-content.html  patch-content.md  shell.nix
.github/workflows/: publish.yml
src/: cli.rs  fetching.rs  headers.rs  html_ops.rs  logging.rs  main.rs  obfuscater.rs  obfuscation.rs  request.rs  special_response.rs  vars.rs
tests/: test-patch.md
